@@ -79,13 +79,12 @@ ILboolean ILAPIENTRY iluScale(ILuint Width, ILuint Height, ILuint Depth)
 						return IL_FALSE;
 				}
 
-				if(iluCurImage->Width>Width) // shrink width first
+				if (iluCurImage->Width > Width) // shrink width first
 				{
 					Origin = iluCurImage->Origin;
 					Temp = iluScale_(iluCurImage, Width, iluCurImage->Height, iluCurImage->Depth);
-					if (Temp != NULL)
-					{
-						if( !ilTexImage(Temp->Width, Temp->Height, Temp->Depth, Temp->Bpp, Temp->Format, Temp->Type, Temp->Data ) ) {
+					if (Temp != NULL) {
+						if (!ilTexImage(Temp->Width, Temp->Height, Temp->Depth, Temp->Bpp, Temp->Format, Temp->Type, Temp->Data)) {
 							ilCloseImage(Temp);
 							return IL_FALSE;
 						}
@@ -93,14 +92,12 @@ ILboolean ILAPIENTRY iluScale(ILuint Width, ILuint Height, ILuint Depth)
 						ilCloseImage(Temp);
 					}
 				}
-				else
-				if(iluCurImage->Height>Height) // shrink height first
+				else if (iluCurImage->Height > Height) // shrink height first
 				{
 					Origin = iluCurImage->Origin;
 					Temp = iluScale_(iluCurImage, iluCurImage->Width, Height, iluCurImage->Depth);
-					if (Temp != NULL)
-					{
-						if( !ilTexImage(Temp->Width, Temp->Height, Temp->Depth, Temp->Bpp, Temp->Format, Temp->Type, Temp->Data) ) {
+					if (Temp != NULL) {
+						if (!ilTexImage(Temp->Width, Temp->Height, Temp->Depth, Temp->Bpp, Temp->Format, Temp->Type, Temp->Data)) {
 							ilCloseImage(Temp);
 							return IL_FALSE;
 						}
@@ -119,7 +116,7 @@ ILboolean ILAPIENTRY iluScale(ILuint Width, ILuint Height, ILuint Depth)
 	PalType = iluCurImage->Pal.PalType;
 	Temp = iluScale_(iluCurImage, Width, Height, Depth);
 	if (Temp != NULL) {
-		if( !ilTexImage(Temp->Width, Temp->Height, Temp->Depth, Temp->Bpp, Temp->Format, Temp->Type, Temp->Data) ) {
+		if (!ilTexImage(Temp->Width, Temp->Height, Temp->Depth, Temp->Bpp, Temp->Format, Temp->Type, Temp->Data)) {
 			ilCloseImage(Temp);
 			return IL_FALSE;
 		}
